Fix important sur la scrollbar (pas content !)

--- a/src/packages/CSS/Controls/LayerSwitcher/DSFRlayerSwitcherStyle.css
+++ b/src/packages/CSS/Controls/LayerSwitcher/DSFRlayerSwitcherStyle.css
@@ -108,7 +108,7 @@ div[id^=GPadvancedTools_ID_] {
 
 .gpf-panel__body_ls {
     overflow: auto;
-    max-height: 300px;
+    max-height: 300px !important;
 }
 
 .gpf-panel__title_ls {
